app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "bootstrap-sprockets";
@import "bootstrap";

//Variables
$white: #F4FFF9;
$black: #0A0310;
$brand-color: #5A3082;
$highlight: lighten($brand-color, 10%);
$darken: darken($brand-color, 10%);
$spacing: 1rem;

@mixin headings {
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
}

@mixin paragraph {
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
}

a, a:hover {
  text-decoration: none;
  color: $brand-color;
}

//Header

header {
  background: $white;
  padding: $spacing;
  overflow: hidden;

  h1 {
    @include headings;
    color: $brand-color;
    display: inline;
    padding-left: 10px;
    float: left;
  }

  .logo {
    display: inline;
    margin-top: 14px;
    float: left;
  }

  .logo-img {
    width: 50px;
  }

}

nav {
  background: $darken;

  ul {
    list-style-type: none;
    margin-bottom: 0;
  }

  ul li {
    color: white;
    display: inline-block;
    margin-left: $spacing;
    text-transform: uppercase;
  }

  li a {
    color: white;
    display: inline-block;
    padding: $spacing;
  }

  li a:hover {
    background: white;
    color: $brand-color;
  }
}

//Posts

h2 {
  @include headings;
  color: $highlight;
}

h3 {
  @include headings;
  color: $darken;
}

 p {
  @include paragraph;
  color: $black;
 }

.panel-default {
  padding: $spacing;
}

.post-container {
  margin-top: $spacing;

  p {
    padding: $spacing;
  }
}

//Users

h4 {
  @include headings;
  font-size: 2rem;
  padding: $spacing;
}

h5 {
  @include headings;
}

.profile {
  width: 20%;
  float: left;
  margin-top: 4rem;

}

.profile-pic {
  width: 150px;
  height: 150px;
  border-radius: 100%;
}

.user-body {
  width: 80%;
  float: right;
}

.user-posts li {
  margin-bottom: $spacing;
}

.more-posts {
  padding: $spacing;
}

